[package]
  edition = "2021"
  name    = "dbexp"
  version = "0.1.0"

[workspace]
  default-members = [
    "data_types",
    "hcl_queries",
    "hcl_schemas",
    "index_btree",
    "index_hash",
    "mem_table",
    "rest_api",
  ]
  members = [
    "data_types",
    "hcl_queries",
    "hcl_schemas",
    "index_btree",
    "index_hash",
    "mem_table",
    "primitives",
    "rest_api",
    "submodules/indexmap",
    "submodules/petgraph",
  ]

  [workspace.dependencies]
    anyhow = "1.0"

    [workspace.dependencies.hashbrown]
      features = ["nightly", "raw", "rayon", "serde"]
      version  = "0.14"

    [workspace.dependencies.petgraph]
      features = ["serde-1"]
      path     = "./submodules/petgraph"

    [workspace.dependencies.indexmap]
      features = ["serde"]
      path     = "./submodules/indexmap"

    [workspace.dependencies.im]
      features = ["rayon", "serde"]
      version  = "15.1"

    [workspace.dependencies.rayon]
      version = "1.10"

    [workspace.dependencies.serde]
      features = ["derive"]
      version  = "1.0"

    [workspace.dependencies.bumpalo]
      features = ["serde", "std"]
      version  = "3.16"

    [workspace.dependencies.bumpalo-herd]
      version = "0.1"

    [workspace.dependencies.rand]
      version = "0.8"

    [workspace.dependencies.chrono]
      version = "0.4"

    [workspace.dependencies.base62]
      version = "2.0"

    [workspace.dependencies.itoa]
      version = "1.0"

    [workspace.dependencies.ryu]
      version = "1.0"

    [workspace.dependencies.sharded-slab]
      version = "0.1"

    [workspace.dependencies.parking_lot]
      version = "0.12"

[dependencies]
  clap = { version = "4.5.4", features = ["derive"] }
