[package]
  edition = "2021"
  name    = "core"
  version = "0.1.0"

[dependencies]
  anyhow     = { workspace = true }
  base62     = { workspace = true }
  chrono     = { workspace = true }
  hcl-rs     = { workspace = true }
  itoa       = { workspace = true }
  primitives = { path = "../primitives" }
  rand       = { workspace = true }
  ryu        = { workspace = true }
  serde      = { workspace = true }
