[package]
  edition = "2021"
  name    = "core"
  version = "0.1.0"

[dependencies]
  anyhow      = { workspace = true }
  indexmap    = { workspace = true }
  memmap2     = { workspace = true }
  parking_lot = { workspace = true }
  petgraph    = { workspace = true }
  primitives  = { path = "../primitives" }
  serde       = { workspace = true }
  thiserror   = { workspace = true }
