[package]
  edition = "2021"
  name    = "primitives"
  version = "0.1.0"

[dependencies]
  anyhow       = { workspace = true }
  bumpalo      = { workspace = true }
  bumpalo-herd = { workspace = true }
  hashbrown    = { workspace = true }
  parking_lot  = { workspace = true }
  serde        = { workspace = true }
