[package]
  edition = "2021"
  name    = "primitives"
  version = "0.1.0"

[dependencies]
  anyhow      = { workspace = true }
  base62      = { workspace = true }
  chrono      = { workspace = true }
  hcl-rs      = { workspace = true }
  indexmap    = { workspace = true }
  itoa        = { workspace = true }
  parking_lot = { workspace = true }
  petgraph    = { workspace = true }
  rand        = { workspace = true }
  ryu         = { workspace = true }
  serde       = { workspace = true }
